# torcharrow

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  column.html  dataframe.html  dtypes.html  functional.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.py  torcharrow.html  torcharrow10min.ipynb  torcharrow_data_pipes.ipynb  tutorial.ipynb  version.txt  versions.html
.github/workflows/: deploy-doc.yml  linux-nightly.yml  macos.yml  nightly-conda.yml  nightly-wheel.yml  rc-wheel-build.yml  ubuntu.yml  velox.yml
0.1.0/: .buildinfo  column.html  dataframe.html  functional.html  genindex.html  index.html  objects.inv  search.html  torcharrow.html
0.1.0/_sources/: column.rst.txt  torcharrow.rst.txt
0.1.0/_static/: documentation_options.js
_sources/: column.rst.txt  dataframe.rst.txt
csrc/velox/: CMakeLists.txt  VariantToVector.cpp  VariantToVector.h  _torcharrow.pyi  bindings.h  column.cpp  column.h  lib.cpp  register_bindings.cpp  tensor_conversion.cpp  tensor_conversion.h  vector.cpp  vector.h
csrc/velox/functions/: CMakeLists.txt  Makefile  functions.h  gpt2_bpe_tokenizer.cpp  gpt2_bpe_tokenizer.h  gpt2_bpe_tokenizer_pybind.cpp  gpt2_bpe_tokenizer_pybind.h  numeric_functions.h  regex.h  register_udf.cpp  string_functions.h
csrc/velox/functions/rec/: bucketize.h  clamp_list.h  compute_score.h  firstX.h  sigrid_hash.h
csrc/velox/functions/rec/tests/: BucketizeTest.cpp  ComputeScoreTest.cpp  FirstXTest.cpp  SigridHashTest.cpp
csrc/velox/functions/tests/: FunctionsTest.cpp
csrc/velox/functions/text/: add_elements.h  add_token.h  add_tokens.h  bpe_tokenize.h  gpt2_bpe_tokenizer.cpp  gpt2_bpe_tokenizer.h  regex.cpp  regex.h  vocab.cpp  vocab.h  vocab_ops.h
csrc/velox/pyvelox/: CMakeLists.txt  pyvelox.cpp  pyvelox.h
docs/source/: column.rst  conf.py  dataframe.rst  dtypes.rst  functional.rst  index.rst  torcharrow.rst
docs/source/_template/: layout.html
main/: .buildinfo  column.html  dataframe.html  functional.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  torcharrow.html
main/_sources/: torcharrow.rst.txt
packaging/: README.md  build_conda.sh  build_wheel.sh  fix_conda_dylib_paths.sh  pkg_helpers.bash
packaging/torcharrow/: build.sh  meta.yaml  run_test.sh
scripts/: _setup-macos.sh  build_mac_dep.sh  install_ubuntu_folly.sh  setup-ubuntu.sh
tools/codegen/: velox_binding_stubgen.py
torcharrow/: __init__.py  _functional.py  _interop.py  _pytorch.py  column_factory.py  dispatcher.py  dtypes.py  dtypes_core.py  expression.py  functional.py  icolumn.py  idataframe.py  ilist_column.py  imap_column.py  interop.py  interop_arrow.py  inumerical_column.py  istring_column.py  pytorch.py  scope.py  trace.py
torcharrow/_pytorch/: common.py  rec.py
torcharrow/benchmark/: benchmark_list_construction.py  benchmark_vmap.py
torcharrow/demo_rt/: __init__.py  dataframe_demo.py  list_column_demo.py  map_column_demo.py  numerical_column_demo.py  string_column_demo.py
torcharrow/test/: __init__.py  test_arrow_interop.py  test_arrow_interop_cpu.py  test_dataframe.py  test_dataframe_cpu.py  test_dataframe_demo.py  test_dtypes.py  test_expression.py  test_factory.py  test_functional_cpu.py  test_interop.py  test_interop_cpu.py  test_interop_demo.py  test_legacy_interop.py  test_list_column.py  test_list_column_cpu.py  test_list_column_demo.py  test_map_column.py  test_map_column_cpu.py  test_map_column_demo.py  test_numerical_column.py  test_numerical_column_cpu.py  test_numerical_column_demo.py  test_string_column.py  test_string_column_cpu.py  test_string_column_demo.py  test_trace.py  test_utils.py
torcharrow/test/integration/: test_criteo.py
torcharrow/test/lib_test/: README  test_column.py  test_udf.py
torcharrow/test/transformation/: test_bucketize.py  test_bucketize_dense_to_sparse.py  test_clamp.py  test_compute_score.py  test_data_clean_ops.py  test_firstx.py  test_functional.py  test_list.py  test_numeric_ops.py  test_sigrid_hash.py  test_text_ops.py
torcharrow/velox_rt/: __init__.py  column.py  dataframe_cpu.py  functional.py  list_column_cpu.py  map_column_cpu.py  numerical_column_cpu.py  string_column_cpu.py  typing.py
tutorial/: tutorial.ipynb  tutorial.py
